--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.3",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "date-fns": "^2.29.3",
     "expo": "~48.0.6",
     "expo-font": "~11.1.1",
     "expo-splash-screen": "~0.18.1",
@@ -17,8 +19,10 @@
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.71.3",
+    "react-native-pager-view": "^6.1.4",
     "react-native-safe-area-context": "4.5.0",
-    "react-native-svg": "13.4.0"
+    "react-native-svg": "13.4.0",
+    "react-native-svg-transformer": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
