--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,33 @@
 {
-  "compilerOptions": {},
-  "extends": "expo/tsconfig.base"
+  "extends": "expo/tsconfig.base",
+  "compilerOptions": {
+    "strict": true,
+    "baseUrl": "./",
+    "paths": {
+      "@assets/*": [
+        "src/assets/*"
+      ],
+      "@components/*": [
+        "src/components/*"
+      ],
+      "@screens/*": [
+        "src/screens/*"
+      ],
+      "@global/*": [
+        "src/global/*"
+      ],
+      "@storage/*": [
+        "src/storage/*"
+      ],
+      "@hooks/*": [
+        "src/hooks/*"
+      ],
+      "@themes/*": [
+        "src/themes/*"
+      ],
+      "@utils/*": [
+        "src/utils/*"
+      ],
+    }
+  }
 }
